finishing first stage of animation -border flashing-

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div id="container">
       <div class="border">
         <div class="w-1">
-          <span>D</span><span>E</span><span>V</span>
+            DEV
         </div>
         <div class="w-2">
-            <span>H</span><span>A</span><span>U</span><span>S</span>
+            HAUS
         </div>
         <div class="w-3">
-            <span>L</span><span>E</span><span>I</span><span>P</span><span>Z</span><span>I</span><span>G</span>
+            LEIPZIG
         </div>
       </div>
     </div>
