finishing first simple method to animate with css

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <body>
     <div id="container">
       <div class="border">
-        <div class="w-1">
+        <div class="w-1" data-word="DEV">
             DEV
         </div>
-        <div class="w-2">
+        <div class="w-2" data-word="HAUS">
             HAUS
         </div>
-        <div class="w-3">
+        <div class="w-3" data-word="LEIPZIG">
             LEIPZIG
         </div>
       </div>
